--- a/app/src/main/res/layout/list_view.xml
+++ b/app/src/main/res/layout/list_view.xml
@@ -5,5 +5,5 @@
     android:textSize="24sp"
     android:textColor="#FFF"
     android:padding="10dp"
-    android:background="#024d6c"
+    android:background="#02425c"
     xmlns:android="http://schemas.android.com/apk/res/android" />
