--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -14,7 +14,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:src="@drawable/ic_add_circle_outline_black_24dp"
+            android:src="@drawable/add"
             android:background="#08314a"
             android:layout_marginTop="12dp"/>
 
