--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,9 +14,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:src="@drawable/ic_add_circle_outline_black_24dp"
+            android:src="@drawable/add"
             android:background="#08314a"
-            android:layout_marginTop="12dp"/>
+            android:layout_marginTop="10dp"/>
 
         <EditText
             android:id="@+id/editTextAbout"
